<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>com.xdev.ooms</groupId>
    <artifactId>oosm-monolith-parent</artifactId>
    <version>1.4.0</version>
    <packaging>pom</packaging>

    <name>OOSM Modular Monolith</name>
    <description>OSM backend migration target: modular monolith with one database.</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <modelmapper.version>3.2.2</modelmapper.version>
        <springdoc.version>2.8.6</springdoc.version>
        <itextpdf.version>5.5.13.3</itextpdf.version>
        <commons-csv.version>1.14.0</commons-csv.version>
        <poi.version>5.2.3</poi.version>
        <zxing.version>3.5.3</zxing.version>
        <logstash-logback.version>7.4</logstash-logback.version>
        <resend-java.version>4.4.0</resend-java.version>
    </properties>

    <modules>
        <module>modules/shared-kernel</module>
        <module>modules/security</module>
        <module>modules/administration</module>
        <module>modules/inventory</module>
        <module>modules/conditioning</module>
        <module>modules/finance</module>
        <module>modules/reception</module>
        <module>modules/storage</module>
        <module>modules/production</module>
        <module>modules/document-generation</module>
        <module>modules/hr</module>
        <module>modules/reporting</module>
        <module>app</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>shared-kernel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>administration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>inventory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>conditioning</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>finance</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>reception</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>production</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>document-generation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>hr</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xdev.ooms</groupId>
                <artifactId>reporting</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.modelmapper</groupId>
                <artifactId>modelmapper</artifactId>
                <version>${modelmapper.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>2.2.28</version>
            </dependency>
            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itextpdf</artifactId>
                <version>${itextpdf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${commons-csv.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>core</artifactId>
                <version>${zxing.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>javase</artifactId>
                <version>${zxing.version}</version>
            </dependency>
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback.version}</version>
            </dependency>
            <dependency>
                <groupId>com.resend</groupId>
                <artifactId>resend-java</artifactId>
                <version>${resend-java.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
